# BioFilmsCZI

./: README.md
.github/workflows/: build.yml
Biofilms/Dummy/: 2_colors.ome.tiff  convert.py
Biofilms/inc/: analyze.py  info_czi.py
Biofilms/src/: Ag-P2-3h-2.xml  Image_1.xml  dead_cells.py  intensity.py  living_cells.py  read_czi.py  test.py  tool_tkinter.py  tool_tkinter.spec
Tools/BioFilmZ/: read.py
Tools/BioFilmZ/BioFilmZ/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
